$Id$

2008-01-15 Laurent Laville <pear@laurent-laville.org>

  * VERSION: Final version (stable) 1.5.0 released.
  - implement request#12194 : support of At-Rules
  - add new function getOptions() to retrieve easily all configuration options at once
  - add new function validate() to check data source with the W3C CSS validator service
    see file examples/CSS_validate.php

2007-12-14 Laurent Laville <pear@laurent-laville.org>

  * VERSION: Final version (stable) 1.4.0 released.
  - removed old class (private) properties related to options ($_xhtmlCompliant,
    $_cache, $_singleLine, $_charset, $_contentDisposition, $_groupsFirst,
    $_allowDuplicates), now group by in a private array $options.
  - added class constructor (ZE2) for PHP5.
  - Error handler allow now to use PEAR_ERROR_CALLBACK to customize action
    (log yes/no, print yes/no) when an error/exception is raised.
  - remove trailing EOL in toString() output (with oneline option set to true)
  - tests suite migrated from PHPUnit 1.x to 3.x

2007-10-22 Laurent Laville <pear@laurent-laville.org>

  * VERSION: Final version (stable) 1.3.0 released.
  - prevent invalide CSS data source in to parse
  - add Content-Disposition to the headers in display(); request#12195
  - remove pointless NEWS file from distribution

2007-06-12 Laurent Laville <pear@laurent-laville.org>

  * VERSION: Final version (stable) 1.2.0 released.
  - No code changes since previous version

2007-02-18 Laurent Laville

  * VERSION: Version 1.1.3 (stable) released.
  - fixed bug #10103 : oneline attribute typo error in class constructor

2007-01-03 Laurent Laville

  * VERSION: Version 1.1.2 (stable) released.
  - fixed error into grepStyle() method : conflict between goup (alibis) and simple element

2007-01-01 Laurent Laville

  * VERSION: Version 1.1.1 (stable) released.
  - fixed error catch into parseData() method (related to 2006-12-21 modification)

2007-01-01 Laurent Laville

  * VERSION: Version 1.1.0 (stable) released.